--- a/e-commerce.css
+++ b/e-commerce.css
@@ -287,6 +287,10 @@ position: absolute;
     border-radius: 2px;
     cursor: pointer;
 }
+.flex-item button:hover{
+    color: #e91111;
+    background: #333;
+}
 
 .flex-item .img{
     width: 8%;
@@ -537,7 +541,7 @@ margin-bottom: 2rem;}
     }
 
     .flex-item{
-        width: 9rem;
+        width: 9.5rem;
         height: 235px;
     }
 
@@ -548,7 +552,7 @@ margin-bottom: 2rem;}
     }
 
     .flex-item img{
-        width: 78%;
+        width: 7.3rem;
         height: 90px;
     }
 
@@ -572,6 +576,11 @@ margin-bottom: 2rem;}
     .flex button{
         font-size: 1.5vw;
         margin-bottom: 0.8rem;
+    }
+
+    .flex-item button:hover{
+        color: #e91111;
+        background: #333;
     }
 
 .notice h2{
@@ -604,34 +613,35 @@ margin-bottom: 2rem;}
 
 
     .flex{
-        margin-left: -0.6rem;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: -36% !important;
-    width: 100%;
+        margin-left: 1.4rem;
+        display: flex;
+        gap: -5rem !important;
+    width: 80%;
  
     
     
     }
 
     .flex-item{
-        width: 8rem;
+        width: 10.9rem;
         height: 225px;
     }
 
     .flex .details{
-        font-size: 2.2vw;
+        font-size: 2.5vw;
         padding: 2px;
+        margin-top: 1rem;
         
     }
 
     .flex-item img{
-        width: 78%;
+        width: 87%;
         height: 90px;
+        margin-left: 0.8rem;
     }
 
     .flex-item h3{
-        font-size: 0.6rem;
+        font-size: 0.75rem;
         font-weight: 600;
     }
 
@@ -639,17 +649,19 @@ margin-bottom: 2rem;}
         font-size: 2.5vw;
         margin-left: 1rem;
         margin-top: 0.9rem;
+        
     }
 
     .flex .img{
-        width: 15%;
+        width: 18%;
         margin-top: 2.7rem;
-        margin-left: -0.8rem;
+        margin-left: -1.8rem;
     }
 
     .flex button{
         font-size: 1.3vw;
         margin-bottom: 0.8rem;
+        margin-left: 2rem;
     }
 
 .notice h2{
@@ -657,7 +669,7 @@ margin-bottom: 2rem;}
     font-size: 5vw;
 }
 
-.flex .cart{margin-left: 4.5rem;
+.flex .cart{margin-left:6rem;
     width: 50%;
 }
 
